# burner-bouncer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  jsr.json
.github/ISSUE_TEMPLATE/: submit-domain.yml
.github/workflows/: ci.yml  publish.yml  sync-blocklist.yml
data/: disposable_domains.json
js/: package-lock.json  package.json  tsconfig.json
js/src/: cli.ts  index.ts
js/tests/: index.test.ts
python/: pyproject.toml
python/burner_bouncer/: __init__.py
python/tests/: test_burner_bouncer.py
scripts/: gen-domains-ts.js  sync-blocklist.js
