[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "burner-bouncer"
version = "1.1.1"
description = "Zero-dependency disposable/burner email detector"
readme = {file = "../README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["email", "disposable", "burner", "spam", "validation"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Email",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/grocerysushi/burner-bouncer"
Repository = "https://github.com/grocerysushi/burner-bouncer"
Issues = "https://github.com/grocerysushi/burner-bouncer/issues"

[tool.hatch.build.targets.wheel]
packages = ["burner_bouncer"]
